styles.css
.boc-podcast-title-container {
    padding: 2px;
    margin: 1px 1px 2px 1px;
    display: block;
}
.boc-title {
    margin:3px 0 0 5px;
    text-transform: uppercase;
    color: #333;
    cursor: pointer;
    display: inline-block;
}
.boc-podcast-title-container img {
    width:44px;
    display: inline-block;
    vertical-align: top
}
.boc-title:after {
    content: attr(data-episode-count);
    display:block;
    font-size: 12px;
    margin:0 0 3px 0;
    color:#666;
}
.boc-episode-container {
    overflow:auto;
    max-height: 400px;
    margin-bottom:10px;
    border:#ccc 1px solid;
    border-radius: 1px;
    padding:2px 2px 3px 2px;
    display:block;
}
.boc-collapsed-episode-container {
    max-height: 0;
    overflow:hidden;
    margin-bottom:0;
    border-color:transparent;
    padding: 0;
    display:none;
    
}

.boc-episode-container .episodecell {
    margin-bottom:4px;
}
.boc-episode-container .episodecell:last-child {
    margin-bottom: 0;
}

